# kitsu.rs

./: Cargo.toml  README.md
examples/: README.md
examples/01_reqwest/: Cargo.toml
examples/02_hyper/: Cargo.toml
examples/hyper/: Cargo.toml
examples/hyper/src/: main.rs
examples/reqwest/: Cargo.toml
examples/reqwest/src/: main.rs
src/: error.rs  lib.rs  model.rs  reqwest_kitsu.rs
src/bridge/: hyper.rs  reqwest.rs
tests/: test_hyper_support.rs  test_reqwest_support.rs
