[package]
authors = ["Mei Boudreau <xanizl@me.com>", "Zeyla Hellyer <zey@zey.moe>", "Aaron Karras <chew@lonely.games>"]
name = "kitsu-async"
version = "0.3.0"
edition = "2018"

[dependencies]
async-trait = "~0.1"
url = "~2.2"

[dependencies.serde]
optional = true
version = "~1.0"

[dependencies.serde_derive]
optional = true
version = "~1.0"

[dependencies.serde_json]
optional = true
version = "~1.0"

[dependencies.hyper]
optional = true
version = "~0.11"

[dependencies.hyper-tls]
optional = true
version = "~0.1"

[dependencies.reqwest]
optional = true
version = "~0.10"
features = ["json"]

[dev-dependencies]
tokio = {version = "~0.2", features = ["rt-threaded", "macros"]}

[features]
default = ["reqwest-support"]
hyper-support = ["hyper", "hyper-tls"]
reqwest-support = ["reqwest", "serde-items"]
serde-items = ["serde", "serde_derive", "serde_json"]
